# SolarSystemSim

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  build.sh
src/: Application.cpp  Application.hpp  CMakeLists.txt  Event.cpp  Event.hpp  Input.cpp  Input.hpp  Logger.cpp  Main.cpp  OpenGL.cpp  OpenGL.hpp  Random.cpp  Random.hpp  Simulator.cpp  Simulator.hpp  TextureManager.cpp  TextureManager.hpp  Timer.cpp  Timer.hpp  TriggerClock.cpp  TriggerClock.hpp
src/layers/: EditorLayer.cpp  EditorLayer.hpp  Layer.hpp  SImulationLayer.hpp  SimulationLayer.cpp
src/math/: Math.cpp
src/objects/: Components.cpp  Components.hpp  Planet.cpp  Planet.hpp  SceneObject.hpp  Sun.cpp  Sun.hpp  SunPlanet.cpp  SunPlanet.hpp
src/random_utils/: SceneSerializer.cpp  SceneSerializer.hpp  UI.cpp  UI.hpp
src/renderer/: Camera.cpp  Camera.hpp  IcosahedronSphere.cpp  IcosahedronSphere.hpp  Material.hpp  Renderer.cpp  Renderer.hpp
src/res/shaders/: Line.frag  Line.vert  Picker.frag  Picker.vert  Quad.frag  Quad.vert  Skybox.frag  Skybox.vert  Sphere.frag  Sphere.vert  Sun.frag  Sun.vert  TexturedQuad.frag  TexturedQuad.vert  Triangle.frag  Triangle.vert
src/scenes/: DebugScene.cpp  DebugScene.hpp  EditorScene.cpp  EditorScene.hpp  Layer.hpp  MainLayer.cpp  MainLayer.hpp  Scene.hpp
src/scenes/states/: EditorSceneStates.cpp  EditorSceneStates.hpp  SceneState.hpp
src/vendors/imgui/: imgui.h  imgui_widgets.cpp
src/vendors/imgui_dialog/: ImGuiFileDialog.cpp  ImGuiFileDialog.h
src/vendors/stb_image/: stb_image.h  stb_image_write.h
tests/: CMakeLists.txt  tests.cpp
